# computer_room_rs

./: README.md
computer_room_rs/: Administrator.cpp  Administrator.h  CMakeLists.txt  Identification.h  Oder_File.cpp  Oder_File.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  computer_room.h  global_file.cpp  global_file.h  main.cpp
